@@ -1,0 +1,1 @@
+# Alpha System Plugin Administrator Langauge File
